# Operating-Systems-Replit

./: .replit  CMakeLists.txt  argument1  compile_commands.json  replit.nix
lab-01/: CMakeLists.txt  Readme.md  hello.cpp  mycp.cpp  part1.cpp  part2.cpp  part2.h  world.c
lab-02/: 1_4.cpp  1_5.cpp  1_6.cpp  CMakeLists.txt  Readme.md
lab-02/includes/: f2.h
lab-03/: CMakeLists.txt
lab-05/: Readme.md
